; ModuleID = '/home/carl/AnghaBench/linux/block/extr_blk-wbt.c_wbt_queue_depth_changed.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_blk-wbt.c_wbt_queue_depth_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rq_qos = type { i32 }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rq_qos*)* @wbt_queue_depth_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wbt_queue_depth_changed(%struct.rq_qos* %0) #0 {
  %2 = alloca %struct.rq_qos*, align 8
  store %struct.rq_qos* %0, %struct.rq_qos** %2, align 8
  %3 = load %struct.rq_qos*, %struct.rq_qos** %2, align 8
  %4 = getelementptr inbounds %struct.rq_qos, %struct.rq_qos* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @blk_queue_depth(i32 %5)
  %7 = load %struct.rq_qos*, %struct.rq_qos** %2, align 8
  %8 = call %struct.TYPE_5__* @RQWB(%struct.rq_qos* %7)
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  store i32 %6, i32* %10, align 4
  %11 = load %struct.rq_qos*, %struct.rq_qos** %2, align 8
  %12 = call %struct.TYPE_5__* @RQWB(%struct.rq_qos* %11)
  %13 = call i32 @__wbt_update_limits(%struct.TYPE_5__* %12)
  ret void
}

declare dso_local i32 @blk_queue_depth(i32) #1

declare dso_local %struct.TYPE_5__* @RQWB(%struct.rq_qos*) #1

declare dso_local i32 @__wbt_update_limits(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
